[package]
name = "spare-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
csv = "1.1.6"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
fancy-regex = "0.10.0"
quick-xml = { version = "0.25.0", features = ["serialize"] }
serde = { version = "1.0.144", features = ["derive"] }
